made phone ui look a little better

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </div>
             </li>
             <li class="ch-li">
-                <div class="vs"><img src="img/vs.png" height="200px" width="auto"></div>
+                <div class="vs"><img src="img/vs.png" height="100vh" width="auto"></div>
             </li>
             <li class="ch-li">
                 <div class="computer-choice">
